--- a/ms-patient/src/main/resources/application-local.properties
+++ b/ms-patient/src/main/resources/application-local.properties
@@ -1,11 +1,11 @@
 spring.application.name=medilabo
 
 ################### DataSource Configuration ##########################
-spring.datasource.url=aremplacer
+spring.datasource.url=jdbc:mysql://localhost:6603/medilabo_patient
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=aremplacer
-spring.datasource.password=aremplacer
+spring.datasource.username=root
+spring.datasource.password=passer@123
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
