--- a/ms-patient/src/main/resources/application.properties
+++ b/ms-patient/src/main/resources/application.properties
@@ -1,3 +1,22 @@
 spring.application.name=ms-patient
-
 server.port=8081
+
+
+################### DataSource Configuration ##########################
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/patient?allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+
+
+################### Hibernate Configuration ##########################
+#spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+# For Hibernate 6
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.springframework.web=INFO
