--- a/ms-front/src/main/resources/application.properties
+++ b/ms-front/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.application.name=ms-front
 server.port=8081
 
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.prefix=classpath:/templates/
+spring.web.resources.static-locations=classpath:/static/
+spring.web.resources.cache.period=0
+
 gateway-uri=http://localhost:8080
 list-patient-uri=${gateway-uri}/patient
