--- a/ms-gateway/src/main/resources/application.properties
+++ b/ms-gateway/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=ms-gateway
 
 server.port=8080
 
-patient-uri=http://localhost:8082/
+patient-uri=http://medilabo-patient:8082/
+note-uri=http://medilabo-note:8083/
