--- a/ms-gateway/pom.xml
+++ b/ms-gateway/pom.xml
@@ -64,6 +64,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>gateway</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
