--- a/ms-note/src/main/resources/application.properties
+++ b/ms-note/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ms-note
 server.port=8083
 
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=${MONGODB_HOST:localhost}
+spring.data.mongodb.port=${MONGODB_PORT:27017}
 spring.data.mongodb.database=notes
 
