--- a/ms-patient/src/main/resources/application.properties
+++ b/ms-patient/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8082
 
 
 ################### DataSource Configuration ##########################
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/patient?allowPublicKeyRetrieval=true
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/patient?allowPublicKeyRetrieval=true
+spring.datasource.username=${MYSQL_USER:user1}
+spring.datasource.password=${MYSQL_PASSWORD:passer123}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
