--- a/ms-front/src/main/resources/application.properties
+++ b/ms-front/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.web.resources.cache.period=0
 
 gateway-uri=http://localhost:8080
 list-patient-uri=${gateway-uri}/patient
-dossier-patient-uri=${gateway-uri}/patient/%d
+detail-patient-uri=${gateway-uri}/patient/%d
