retrieve all evaluation risk for all patients

--- a/ms-evaluation/src/main/resources/application.properties
+++ b/ms-evaluation/src/main/resources/application.properties
@@ -5,4 +5,5 @@ server.port=8084
 #note-uri=http://medilabo-note:8083/
 
 patient-detail-uri=http://localhost:8082/patient/%d
+list-patient-uri=http://localhost:8082/patient
 note-detail-uri=http://localhost:8083/note/%s
