expose ms-evaluation thru the gtw

--- a/ms-gateway/src/main/resources/application.properties
+++ b/ms-gateway/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8080
 
 patient-uri=http://medilabo-patient:8082/
 note-uri=http://medilabo-note:8083/
+evaluation-uri=http://medilabo-evaluation:8084/
