--- a/ms-evaluation/pom.xml
+++ b/ms-evaluation/pom.xml
@@ -62,6 +62,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>evaluation-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
