--- a/ms-evaluation/src/main/resources/application.properties
+++ b/ms-evaluation/src/main/resources/application.properties
@@ -1,9 +1,6 @@
 spring.application.name=ms-evaluation
 server.port=8084
 
-#patient-uri=http://medilabo-patient:8082/
-#note-uri=http://medilabo-note:8083/
-
-patient-detail-uri=http://localhost:8082/patient/%d
-list-patient-uri=http://localhost:8082/patient
-note-detail-uri=http://localhost:8083/note/%s
+patient-detail-uri=http://medilabo-patient:8082/patient/%d
+list-patient-uri=http://medilabo-patient:8082/patient
+note-detail-uri=http://medilabo-note:8083/note/%s
