--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -86,6 +86,18 @@ services:
     depends_on:
       gateway-service:
         condition: service_started
+        
+  auth-service:
+    build: ./ms-authentication
+    container_name: medilabo-auth
+    restart: always
+    ports:
+      - 8085:8085
+    networks:
+      - medilabo-network
+    depends_on:
+      gateway-service:
+        condition: service_started
 
     volumes:
       - .m2:/root/.m2
