--- a/ms-gateway/src/main/resources/application.properties
+++ b/ms-gateway/src/main/resources/application.properties
@@ -5,3 +5,4 @@ server.port=8080
 patient-uri=http://medilabo-patient:8082/
 note-uri=http://medilabo-note:8083/
 evaluation-uri=http://medilabo-evaluation:8084/
+auth-uri=http://medilabo-auth:8085/
