--- a/ms-gateway/src/main/resources/application-local.properties
+++ b/ms-gateway/src/main/resources/application-local.properties
@@ -4,3 +4,5 @@ server.port=8080
 
 patient-uri=http://localhost:8082/
 note-uri=http://localhost:8083/
+auth-uri=http://localhost:8085/
+auth-token-validation-uri=${auth-uri}auth/validate?token=%s
