refactor: modified namings and auth filter

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,7 +54,7 @@ services:
       MYSQL_PORT: 3306
     depends_on:
       mysqldb:
-        condition: service_healthy
+        condition: service_started
       gateway-service:
         condition: service_started
 
