feat: added login

--- a/ms-front/src/main/resources/application.properties
+++ b/ms-front/src/main/resources/application.properties
@@ -13,3 +13,5 @@ default-patient-uri=${gateway-uri}/patient
 patient-id-uri=${gateway-uri}/patient/%d
 note-patient-uri=${gateway-uri}/note/%d
 create-note-uri=${gateway-uri}/note
+## bypasses gateway for unknown 404 error
+auth-uri=http://localhost:8085/auth
