--- a/ms-front/src/main/resources/application.properties
+++ b/ms-front/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.web.resources.static-locations=classpath:/static/
 spring.web.resources.cache.period=0
 
 gateway-uri=http://localhost:8080
-list-patient-uri=${gateway-uri}/patient
-dossier-patient-uri=${gateway-uri}/patient/%d
+default-patient-uri=${gateway-uri}/patient
+patient-id-uri=${gateway-uri}/patient/%d
+note-patient-uri=${gateway-uri}/note/%d
+create-note-uri=${gateway-uri}/note
 auth-uri=http://localhost:8085/auth
+evaluation-risque-uri=${gateway-uri}/evaluation/%d
