--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,9 @@ services:
     image: mysql
     container_name: medilabo-mysql
     ports:
-      - 3306:3306
+      - 3308:3308
+    expose:
+      - 3308
     volumes:
       - ./patient.sql:/docker-entrypoint-initdb.d/patient.sql
     networks:
@@ -13,6 +15,7 @@ services:
       MYSQL_USER: user1
       MYSQL_PASSWORD: passer123
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_TCP_PORT: 3308
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h localhost -u root -proot"]
       timeout: 20s
@@ -39,6 +42,18 @@ services:
       - mysqldb
       - mongodb
 
+  front-ui:
+    build: ./ms-front
+    container_name: medilabo-front-ui
+    restart: always
+    ports:
+      - 8081:8081
+    networks:
+      - medilabo-network
+    depends_on:
+      gateway-service:
+        condition: service_started
+
   patient-service:
     build: ./ms-patient
     container_name: medilabo-patient
@@ -51,7 +66,7 @@ services:
       MYSQL_HOST: mysqldb
       MYSQL_USER: user1
       MYSQL_PASSWORD: passer123
-      MYSQL_PORT: 3306
+      MYSQL_PORT: 3308
     depends_on:
       mysqldb:
         condition: service_started
