--- a/ms-front/pom.xml
+++ b/ms-front/pom.xml
@@ -86,6 +86,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>front-ui</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
